<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>net.apnic.rpki</groupId>
    <artifactId>repositoryd-parent-pom</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>

    <licenses>
        <license>
            <name>BSD</name>
            <url>https://raw.github.com/APNIC-net/repositoryd/master/LICENSE.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <profiles>
        <profile>
            <id>skip-artifacts</id>
            <properties>
                <maven.javadoc.skip>true</maven.javadoc.skip>
                <maven.source.skip>true</maven.source.skip>
            </properties>
        </profile>
        <profile>
            <id>skip-quality</id>
            <properties>
                <maven.quality.skip>true</maven.quality.skip>
            </properties>
        </profile>
        <profile>
            <id>skip-tests</id>
            <properties>
                <maven.test.skip>true</maven.test.skip>
            </properties>
        </profile>
    </profiles>

    <properties>
        <relative.parent.dir>.</relative.parent.dir>
        <java.version>1.7</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
        <maven.compiler.showWarnings>true</maven.compiler.showWarnings>
        <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
        <maven-source-plugin.version>2.2.1</maven-source-plugin.version>
        <maven-javadoc-plugin.version>2.9</maven-javadoc-plugin.version>
        <maven-jxr-plugin.version>2.3</maven-jxr-plugin.version>
        <maven-checkstyle-plugin.version>2.11</maven-checkstyle-plugin.version>
        <maven-pmd-plugin.version>2.7.1</maven-pmd-plugin.version>
        <findbugs-maven-plugin.version>2.5.3</findbugs-maven-plugin.version>
        <findbugs-annotations.version>1.0.0</findbugs-annotations.version>

        <!-- Checkstyle -->
        <checkstyle.failOnViolation>false</checkstyle.failOnViolation>
        <checkstyle.failsOnError>false</checkstyle.failsOnError>
        <checkstyle.violationSeverity>warning</checkstyle.violationSeverity>
        <checkstyle.maxAllowedViolations>5</checkstyle.maxAllowedViolations>

        <!-- PMD -->
        <pmd.failOnViolation>false</pmd.failOnViolation>

        <!-- FindBugs -->
        <findbugs.failOnError>false</findbugs.failOnError>

        <!-- Test related -->
        <maven.test.skip>false</maven.test.skip>

        <!-- Quality related -->
        <maven.quality.skip>false</maven.quality.skip>

        <!-- Extra artifacts -->
        <maven.javadoc.skip>false</maven.javadoc.skip>
        <maven.source.skip>false</maven.source.skip>
        <src.generated.dir>**/generated/**</src.generated.dir>
    </properties>

    <modules>
        <module>server</module>
        <module>protocol</module>
        <module>data</module>
        <module>standalone</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.11</version>
            </dependency>
            <dependency>
                <groupId>org.hamcrest</groupId>
                <artifactId>hamcrest-library</artifactId>
                <version>1.3</version>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>1.9.5</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.hamcrest</groupId>
                        <artifactId>hamcrest-core</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>1.7.5</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-log4j12</artifactId>
                <version>1.7.5</version>
            </dependency>
            <dependency>
                <groupId>findbugs</groupId>
                <artifactId>annotations</artifactId>
                <version>${findbugs-annotations.version}</version>
                <scope>provided</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>${maven-source-plugin.version}</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>${maven-javadoc-plugin.version}</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-checkstyle-plugin</artifactId>
                    <version>${maven-checkstyle-plugin.version}</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-pmd-plugin</artifactId>
                    <version>${maven-pmd-plugin.version}</version>
                </plugin>

                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>findbugs-maven-plugin</artifactId>
                    <version>${findbugs-maven-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>generate-sources-artifact</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <skipSource>${maven.source.skip}</skipSource>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <executions>
                    <execution>
                        <id>generate-javadocs-artifact</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <skip>${maven.javadoc.skip}</skip>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <executions>
                    <execution>
                        <id>checkstyle-check</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>checkstyle</goal>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <violationSeverity>${checkstyle.violationSeverity}</violationSeverity>
                    <maxAllowedViolations>${checkstyle.maxAllowedViolations}</maxAllowedViolations>
                    <sourceDirectory>${project.build.sourceDirectory}</sourceDirectory>
                    <excludes>${src.generated.dir}</excludes>
                    <consoleOutput>true</consoleOutput>
                    <configLocation>file:///${project.basedir}/${relative.parent.dir}/rulesets/checkstyle-rules.xml</configLocation>
                    <logViolationsToConsole>true</logViolationsToConsole>
                    <failOnViolation>${checkstyle.failOnViolation}</failOnViolation>
                    <failsOnError>${checkstyle.failsOnError}</failsOnError>
                    <skip>${maven.quality.skip}</skip>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-pmd-plugin</artifactId>
                <executions>
                    <execution>
                        <id>pmd-check</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>pmd</goal>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <!-- Dont include clover instrumented src, when pmd  -->
                    <excludeRoots>
                        <excludeRoot>${project.build.directory}/clover/src</excludeRoot>
                    </excludeRoots>
                    <excludes>
                        <exclude>${src.generated.dir}</exclude>
                    </excludes>
                    <targetJdk>${java.version}</targetJdk>
                    <rulesets>
                        <ruleset>file:///${project.basedir}/${relative.parent.dir}/rulesets/pmd.xml</ruleset>
                    </rulesets>
                    <verbose>true</verbose>
                    <failOnViolation>${pmd.failOnViolation}</failOnViolation>
                    <skip>${maven.quality.skip}</skip>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>findbugs-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>findbugs-findbugs</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>findbugs</goal>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <jvmArgs>-Xmx1024m -Xms128m -XX:MaxPermSize=512m</jvmArgs>
                    <classFilesDirectory>${project.build.outputDirectory}</classFilesDirectory>
                    <includeFilterFile>file:///${project.basedir}/${relative.parent.dir}/rulesets/findbugs-rules.xml</includeFilterFile>
                    <excludeFilterFile>file:///${project.basedir}/${relative.parent.dir}/rulesets/findbugs-exclude-rules.xml
                    </excludeFilterFile>
                    <fork>true</fork>
                    <failOnError>${findbugs.failOnError}</failOnError>
                    <skip>${maven.quality.skip}</skip>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <reporting>
        <!-- Fixes PMD warning "Unable to locate Source XRef to link to - DISABLED" -->
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jxr-plugin</artifactId>
                <version>${maven-jxr-plugin.version}</version>
            </plugin>
        </plugins>
    </reporting>
</project>
